# tcp-chat

./: CMakeLists.txt  CMakeLists.txt.in  README.md
docs/: architecture.md  setup.md  testing.md  usage.md
include/client/: client.h
include/common/: constants.h  utils.h
include/server/: server.h
src/client/: client  client.cpp  main.cpp
src/common/: utils.cpp
src/server/: main.cpp  server  server.cpp
tests/: client_tests.cpp  server_tests.cpp
